<resources>
    <string name="app_name">Blixr</string>

    <!-- graphics -->
    <string name="usb">\uf287</string>
    <string name="file">\uf0f6</string>
    <string name="ticket">\uf145</string>
    <string name="link">\uf0c1</string>
    <string name="wrench">\uf0ad</string>
    <string name="spinner">\uf110</string>
    <string name="music">\uf001</string>

    <!-- Titles -->
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_login">Login</string>
    <string name="title_main_screen"> </string>
    <string name="title_search_screen">Поиск документов</string>
    <string name="title_share_screen">Пригласить друга</string>
    <string name="title_create_contract">Создать договор</string>
    <string name="title_electronic">Электроника</string>

    <!-- Buttons -->
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="replay">Повторить</string>
    <string name="login">Вход</string>
    <string name="send">Отправить</string>
    <string name="skip">Skip</string>
    <string name="preview">Предпросмотр</string>

    <!-- Tooltips -->
    <string name="login_here">Вход здесь</string>
    <string name="search_here">Поиск договора</string>
    <string name="create_document">Создать договор</string>

    <!-- System -->
    <string name="list_is_empty">Список пуст</string>
    <string name="price_format">%,.2f крон</string>

    <!-- Dialog -->
    <string name="registration_error">Ошибка регистрации</string>
    <string name="email_already_use">Данный Email нельзя использовать</string>
    <string name="registration">Регистрация</string>
    <string name="registration_success_send_email">На Ваш e-mail отправлено письмо. Пожалуйста откройте его, и подтвердите свою учетную запись</string>

    <!-- Errors -->
    <string name="internet_error">Отсутсвует интернет соединение</string>
    <string name="field_is_empty">Поле не заполнено</string>

    <!-- Events -->
    <string name="navigation_drawer_open">Navigation Drawler Open</string>
    <string name="navigation_drawer_close">Navigation Drawler Close</string>

    <!-- Intro 1 -->
    <string name="intro_header_1">1. Первый пункт должен быть длинным</string>
    <string name="intro_description_1">Описание первого пункта должно быть на 5 строк. Даже не знаю как этот текст растянуть на 5 строк</string>

    <!-- Intro 2 -->
    <string name="intro_header_2">2. Второй пункт должен быть длинным</string>
    <string name="intro_description_2">Описание первого пункта должно быть на 5 строк. Даже не знаю как этот текст растянуть на 5 строк</string>

    <!-- Intro 3 -->
    <string name="intro_header_3">3. Третий пункт должен быть длинным</string>
    <string name="intro_description_3">Описание первого пункта должно быть на 5 строк. Даже не знаю как этот текст растянуть на 5 строк</string>

    <!-- Intro 4 -->
    <string name="intro_header_4">4. Четвертый пункт должен быть длинным</string>
    <string name="intro_description_4">Описание первого пункта должно быть на 5 строк. Даже не знаю как этот текст растянуть на 5 строк</string>

    <!-- Intro 5 -->
    <string name="intro_header_5">5. Пятый пункт должен быть длинным</string>
    <string name="intro_description_5">Описание первого пункта должно быть на 5 строк. Даже не знаю как этот текст растянуть на 5 строк</string>

    <!-- Menu -->
    <string name="menu_my_documents">Мои документы</string>
    <string name="menu_film">Фильм</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_terms_link">Линк terms</string>
    <string name="menu_privacy_link">Линк privacy</string>
    <string name="menu_email">E-mail адрес</string>
    <string name="menu_intro">Интро</string>
    <string name="menu_exit">Выход</string>

    <!-- Documents tabs -->
    <string name="my_documents_buy">Покупки</string>
    <string name="my_documents_sell">Продажи</string>
    <string name="my_documents_draft">Черновики</string>

    <!-- Document item list -->
    <string name="buyer">Buyer: %s</string>
    <string name="seller">Seller: %s</string>

    <!-- Share screen -->
    <string name="share_header_text">Введите E-mail адрес вашего друга</string>
    <string name="share_email_hint">E-mail</string>
    <string name="share_description">Ему придет письмо, в котором будет вся подробная информация</string>

    <!-- Templates -->
    <string name="electronics">Electronics</string>
    <string name="instruments">Instruments</string>
    <string name="event_tickets">Event tickets</string>
    <string name="other">Другое</string>
    <string name="blocket_link">Blocket link</string>
    <string name="more_templates_on_the_way">More templates on the way…</string>

    <!-- Login -->
    <string name="blixr_ab_license">Я согласен с тем, что Blixr AB обрабатывает личную информацию обо мне в соответствии с нашей политикой защиты данных.</string>
    <string name="login_field_description">Введите номер социального страхования с 12 цифрами</string>
    <string name="login_subtitle">Описание title</string>
    <string name="yyyymmddxxxx">YYYYMMDDXXXX</string>

    <!-- confirm email -->
    <string name="confirm_email_subtitle">Описание title</string>
    <string name="confirm_email_description">Чтобы иметь возможность общаться с вами. Получения вами квитанций и т.д. Пожалуйста, предоставьте свой адрес электронной почты</string>
    <string name="you_email_hint">Ваш адрес электронной почты</string>

    <!-- Template Electronick -->
    <string name="information">Информация</string>
    <string name="type">Тип</string>
    <string name="mark">Марка</string>
    <string name="another">Другое</string>
    <string name="photos">Фотографии</string>
    <string name="model">Модель</string>
    <string name="serial_number">Серийный номер</string>
    <string name="valid_warranty">Действие гарантии</string>
    <string name="receipt_originals">Оригиналы квитанций</string>
    <string name="state">Состояние</string>
    <string name="other_info">Дополнительная информация</string>
    <string name="method">Способ</string>
    <string name="date">Дата</string>
    <string name="delivery">Доставка</string>
    <string name="payment">Оплата</string>
    <string name="payment_method">Метод оплаты</string>
    <string name="price">Цена</string>

    <string name="as_new">Как новое</string>
    <string name="good">Хорошее</string>
    <string name="used">Использованное</string>

    <string name="picked_up_on_site">Встреча на месте</string>
    <string name="the_seller_delivers_to_the_buyer">Продавец доставляет покупателю</string>
    <string name="the_seller_sends">Продавец отправляет</string>
    <string name="electronically">В электронном виде</string>

    <string name="cash_pay">Наличные деньги</string>
    <string name="swish_pay">Swish</string>
    <string name="other_pay">Другое</string>

    <!-- Template Event -->
    <string name="event_and_ticket_info">Информация о событиях и билетах</string>
    <string name="event">События</string>

    <!-- Search -->
    <string name="search_subtitle">search subtitle</string>
    <string name="contract_code_hint">CONTRACT CODE</string>
    <string name="search_description">search description</string>
    <string name="search">Search</string>
    <string name="count_photos">Добавлено %d фотографий</string>

</resources>
