<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ru.vassuv.blixr.ui.fragment.auth.SearchFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/blixr_logo_colored" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_subtitle"
        android:textAlignment="center"
        android:textColor="@color/textColorLight"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:text="@string/search_description"
        android:textColor="@color/textColorLight" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/contract_code_hint"
        android:textAlignment="center"
        android:inputType="text"
        android:textAllCaps="true"
        android:maxLength="12"
        android:textSize="32sp"
        android:textColor="@color/textColorLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text=""
        android:textColor="@color/textColorLight" />

    <android.support.v7.widget.CardView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_white"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="5dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/search"
                android:textAlignment="center"
                android:textColor="@color/textColorLight"
                android:textSize="18dp" />

        </FrameLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
